add `PATCH /prescriptions/{prescription_id}/purchase`
